[gd_scene load_steps=17 format=2]

[ext_resource path="res://LegendOfZelda/Scripts/HunterDialogChoices.gd" type="Script" id=1]
[ext_resource path="res://LegendOfZelda/Assets/Hunter_1.png" type="Texture" id=2]
[ext_resource path="res://LegendOfZelda/Scripts/Hunter.gd" type="Script" id=3]
[ext_resource path="res://OregonTrail/Fonts/Averia_Serif_Libre/AveriaSerifLibre-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://LegendOfZelda/Scenes/TextPanel.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 3, 3 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 97, 150 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 97, 0, 97, 150 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 194, 0, 97, 150 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 291, 0, 97, 150 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="DynamicFont" id=12]
size = 8
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=13]
size = 6
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="DynamicFont" id=16]
size = 8
font_data = ExtResource( 4 )

[node name="Hunter" type="Area2D"]
position = Vector2( 60, -150 )
scale = Vector2( 0.5, 0.5 )
collision_layer = 4
collision_mask = 5
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 115 )
scale = Vector2( 40, 50 )
shape = SubResource( 14 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 10 )
frame = 2
playing = true

[node name="HunterL1" type="PopupPanel" parent="."]
margin_right = 8.0
margin_bottom = 8.0
custom_styles/panel = SubResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoicesBorder" type="ColorRect" parent="HunterL1"]
margin_right = 8.0
margin_bottom = 8.0
color = Color( 0.160784, 0.105882, 0.105882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoicesBox" type="ColorRect" parent="HunterL1/ChoicesBorder"]
margin_left = 5.0
margin_top = 5.0
margin_right = 355.0
margin_bottom = 85.0
color = Color( 0.235294, 0.156863, 0.156863, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="RichTextLabel" parent="HunterL1/ChoicesBorder/ChoicesBox"]
margin_left = 4.0
margin_top = 5.0
margin_right = 226.0
margin_bottom = 41.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/normal_font = SubResource( 12 )
text = "I used to be the greatest HUNTER in all the land. But these days, I’m feeling a little lonely."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice0" type="RichTextLabel" parent="HunterL1/ChoicesBorder/ChoicesBox"]
margin_left = 25.0
margin_top = 50.0
margin_right = 132.0
margin_bottom = 70.0
rect_scale = Vector2( 1.6, 1.6 )
custom_fonts/normal_font = SubResource( 13 )
text = "Do you want to talk about it?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice1" type="RichTextLabel" parent="HunterL1/ChoicesBorder/ChoicesBox"]
margin_left = 190.0
margin_top = 50.0
margin_right = 297.0
margin_bottom = 70.0
rect_scale = Vector2( 1.6, 1.6 )
custom_fonts/normal_font = SubResource( 13 )
text = "Do I look like I care? Go suck an egg!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pointer0" type="ColorRect" parent="HunterL1/ChoicesBorder/ChoicesBox"]
margin_left = 18.0
margin_top = 52.0
margin_right = 20.0
margin_bottom = 56.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pointer1" type="ColorRect" parent="HunterL1/ChoicesBorder/ChoicesBox"]
margin_left = 184.0
margin_top = 52.0
margin_right = 186.0
margin_bottom = 56.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HunterL2" type="PopupPanel" parent="."]
margin_right = 8.0
margin_bottom = 8.0
custom_styles/panel = SubResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoicesBorder" type="ColorRect" parent="HunterL2"]
margin_right = 8.0
margin_bottom = 8.0
color = Color( 0.160784, 0.105882, 0.105882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoicesBox" type="ColorRect" parent="HunterL2/ChoicesBorder"]
margin_left = 5.0
margin_top = 5.0
margin_right = 355.0
margin_bottom = 85.0
color = Color( 0.235294, 0.156863, 0.156863, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="RichTextLabel" parent="HunterL2/ChoicesBorder/ChoicesBox"]
margin_left = 4.0
margin_top = 5.0
margin_right = 226.0
margin_bottom = 41.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/normal_font = SubResource( 12 )
text = "I used to have a PET, a small rabbit that I cared for very much. But he’s gone and left me. Now I’m all alone."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice0" type="RichTextLabel" parent="HunterL2/ChoicesBorder/ChoicesBox"]
margin_left = 25.0
margin_top = 50.0
margin_right = 132.0
margin_bottom = 70.0
rect_scale = Vector2( 1.6, 1.6 )
custom_fonts/normal_font = SubResource( 13 )
text = "Are you sure he’s not just lost?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice1" type="RichTextLabel" parent="HunterL2/ChoicesBorder/ChoicesBox"]
margin_left = 190.0
margin_top = 50.0
margin_right = 297.0
margin_bottom = 70.0
rect_scale = Vector2( 1.6, 1.6 )
custom_fonts/normal_font = SubResource( 13 )
text = "I’m about to leave you, too. Byeeeeeeeeeeeee!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pointer0" type="ColorRect" parent="HunterL2/ChoicesBorder/ChoicesBox"]
margin_left = 18.0
margin_top = 52.0
margin_right = 20.0
margin_bottom = 56.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pointer1" type="ColorRect" parent="HunterL2/ChoicesBorder/ChoicesBox"]
margin_left = 184.0
margin_top = 52.0
margin_right = 186.0
margin_bottom = 56.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HunterL3" type="PopupPanel" parent="."]
margin_right = 8.0
margin_bottom = 8.0
custom_styles/panel = SubResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoicesBorder" type="ColorRect" parent="HunterL3"]
margin_right = 8.0
margin_bottom = 8.0
color = Color( 0.160784, 0.105882, 0.105882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoicesBox" type="ColorRect" parent="HunterL3/ChoicesBorder"]
margin_left = 5.0
margin_top = 5.0
margin_right = 355.0
margin_bottom = 85.0
color = Color( 0.235294, 0.156863, 0.156863, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="RichTextLabel" parent="HunterL3/ChoicesBorder/ChoicesBox"]
margin_left = 4.0
margin_top = 5.0
margin_right = 226.0
margin_bottom = 41.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/normal_font = SubResource( 12 )
text = "Hm, I hadn’t considered that. Say, friend, could you help me out and see if you can find him?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice0" type="RichTextLabel" parent="HunterL3/ChoicesBorder/ChoicesBox"]
margin_left = 25.0
margin_top = 50.0
margin_right = 132.0
margin_bottom = 70.0
rect_scale = Vector2( 1.6, 1.6 )
custom_fonts/normal_font = SubResource( 13 )
text = "“Of course!”"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice1" type="RichTextLabel" parent="HunterL3/ChoicesBorder/ChoicesBox"]
margin_left = 190.0
margin_top = 50.0
margin_right = 297.0
margin_bottom = 70.0
rect_scale = Vector2( 1.6, 1.6 )
custom_fonts/normal_font = SubResource( 13 )
text = "“This sounds like a ‘you’ problem.”"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pointer0" type="ColorRect" parent="HunterL3/ChoicesBorder/ChoicesBox"]
margin_left = 18.0
margin_top = 52.0
margin_right = 20.0
margin_bottom = 56.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pointer1" type="ColorRect" parent="HunterL3/ChoicesBorder/ChoicesBox"]
margin_left = 184.0
margin_top = 52.0
margin_right = 186.0
margin_bottom = 56.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RejectPanel" type="PopupPanel" parent="."]
margin_right = 8.0
margin_bottom = 8.0
custom_styles/panel = SubResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoicesBorder" type="ColorRect" parent="RejectPanel"]
margin_right = 8.0
margin_bottom = 8.0
color = Color( 0.160784, 0.105882, 0.105882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoicesBox" type="ColorRect" parent="RejectPanel/ChoicesBorder"]
margin_left = 5.0
margin_top = 5.0
margin_right = 355.0
margin_bottom = 85.0
color = Color( 0.235294, 0.156863, 0.156863, 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="RichTextLabel" parent="RejectPanel/ChoicesBorder/ChoicesBox"]
margin_left = 4.0
margin_top = 5.0
margin_right = 226.0
margin_bottom = 41.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/normal_font = SubResource( 16 )
text = "Well that was just uncalled for.
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinTeamPanel" type="PopupPanel" parent="."]
margin_right = 8.0
margin_bottom = 8.0
custom_styles/panel = SubResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoicesBorder" type="ColorRect" parent="JoinTeamPanel"]
margin_right = 8.0
margin_bottom = 8.0
color = Color( 0.160784, 0.105882, 0.105882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoicesBox" type="ColorRect" parent="JoinTeamPanel/ChoicesBorder"]
margin_left = 5.0
margin_top = 5.0
margin_right = 355.0
margin_bottom = 85.0
color = Color( 0.235294, 0.156863, 0.156863, 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="RichTextLabel" parent="JoinTeamPanel/ChoicesBorder/ChoicesBox"]
margin_left = 4.0
margin_top = 5.0
margin_right = 226.0
margin_bottom = 41.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/normal_font = SubResource( 16 )
text = "Wonderful! My PET, my sweet Frumpkin, has returned to me! Thank you, friend! Allow me to join you on your journey."
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="." to="." method="_on_7UP_body_entered"]
[connection signal="about_to_show" from="HunterL1" to="." method="_on_PopupPanel_about_to_show"]
[connection signal="popup_hide" from="HunterL1" to="." method="_on_PopupPanel_popup_hide"]
[connection signal="dialogBoxCheck" from="HunterL1/ChoicesBorder/ChoicesBox" to="." method="_on_ChoicesBox_dialogBoxCheck"]
[connection signal="about_to_show" from="HunterL2" to="." method="_on_PopupPanel_about_to_show"]
[connection signal="popup_hide" from="HunterL2" to="." method="_on_PopupPanel_popup_hide"]
[connection signal="about_to_show" from="HunterL3" to="." method="_on_PopupPanel_about_to_show"]
[connection signal="popup_hide" from="HunterL3" to="." method="_on_PopupPanel_popup_hide"]
[connection signal="about_to_show" from="RejectPanel" to="." method="_on_RejectPanel_about_to_show"]
[connection signal="popup_hide" from="RejectPanel" to="." method="_on_RejectPanel_popup_hide"]
[connection signal="about_to_show" from="JoinTeamPanel" to="." method="_on_JoinTeamPanel_about_to_show"]
[connection signal="popup_hide" from="JoinTeamPanel" to="." method="_on_JoinTeamPanel_popup_hide"]
